appId: xyz.blueskyweb.app
---
- launchApp:
    appId: "xyz.blueskyweb.app"
    clearState: true
    arguments:
      "-EXDevMenuIsOnboardingFinished": true
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: 'http://10.0.2.2:8081'
      - extendedWaitUntil:
          visible: "Continue"
          timeout: 60000
      - pressKey: Back
- extendedWaitUntil:
    visible:
      id: e2eProxyHeaderInput
    timeout: 60000
- tapOn:
    id: e2eProxyHeaderInput
- inputText: ${output.result}
- pressKey: Enter
